--- a/src/src/building-blocks/DeveloperEvaluation.Core/DeveloperEvaluation.Core.csproj
+++ b/src/src/building-blocks/DeveloperEvaluation.Core/DeveloperEvaluation.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
