deleção de produtos e consulta com dapper

--- a/src/src/services/DeveloperEvaluation.CartsApi/DeveloperEvaluation.CartsApi.csproj
+++ b/src/src/services/DeveloperEvaluation.CartsApi/DeveloperEvaluation.CartsApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -21,6 +21,10 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\building-blocks\DeveloperEvaluation.Core\DeveloperEvaluation.Core.csproj" />
   </ItemGroup>
 
 </Project>
