--- a/src/src/services/DeveloperEvaluation.CartsApi/appsettings.Development.json
+++ b/src/src/services/DeveloperEvaluation.CartsApi/appsettings.Development.json
@@ -1,8 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=db_local;Username=admin;Password=Sistema@2024;Include Error Detail=true;"
+  },
+  "RabbitMq": {
+    "UserName": "guest",
+    "PassWord": "guest",
+    "Port": "5672",
+    "Host": "localhost"
+  },
+  "JwtIssuerOptions": {
+    "Key": "7f175563b8c448cab90d48ace63cf234",
+    "Issuer": "webApi",
+    "Audience": "http://localhost:5280"
+  },
+  "AllowedHosts": "*"
 }
