ajuste de chamada de carts

--- a/src/src/services/DeveloperEvaluation.CartsApi/DeveloperEvaluation.CartsApi.csproj
+++ b/src/src/services/DeveloperEvaluation.CartsApi/DeveloperEvaluation.CartsApi.csproj
@@ -27,4 +27,9 @@
     <ProjectReference Include="..\..\building-blocks\DeveloperEvaluation.Core\DeveloperEvaluation.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\DeleteCarts\" />
+    <Folder Include="Application\DeleteCartItens\" />
+  </ItemGroup>
+
 </Project>
