--- a/src/src/building-blocks/DeveloperEvaluation.Core/DeveloperEvaluation.Core.csproj
+++ b/src/src/building-blocks/DeveloperEvaluation.Core/DeveloperEvaluation.Core.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DeveloperEvaluation.MessageBus\DeveloperEvaluation.MessageBus.csproj" />
+  </ItemGroup>
+
 </Project>
