--- a/src/src/services/DeveloperEvaluation.CartsApi/DeveloperEvaluation.CartsApi.csproj
+++ b/src/src/services/DeveloperEvaluation.CartsApi/DeveloperEvaluation.CartsApi.csproj
@@ -26,6 +26,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\building-blocks\DeveloperEvaluation.Core\DeveloperEvaluation.Core.csproj" />
+    <ProjectReference Include="..\..\building-blocks\DeveloperEvaluation.MessageBus\DeveloperEvaluation.MessageBus.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Application\DeleteProducts\" />
+    <Folder Include="Application\UpdateProducts\" />
   </ItemGroup>
 
 </Project>
