adicionando compose e docker file

--- a/src/docker/docker-compose-local.yml
+++ b/src/docker/docker-compose-local.yml
@@ -11,7 +11,7 @@ volumes:
   mongo-developerEvaluation-volume:
 
 services:
-
+ 
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin-developerEvaluation
@@ -65,3 +65,21 @@ services:
       - developerEvaluation-network
     volumes:
       - mongo-developerEvaluation-volume:/data/db    
+  api-products:
+        container_name: developerEvaluation-api-products
+        build: 
+            context: ../src
+            dockerfile: ./services/DeveloperEvaluation.ProductsApi/Dockerfile      
+        restart: always  
+        ports:
+            - "5162:5162"                   
+        environment: 
+            ASPNETCORE_ENVIRONMENT: Docker
+            ASPNETCORE_URLS: http://+:5162
+            CUSTOMCONNSTR_DefaultConnection: "Server=postgres;Port=5432;Database=db_local;Username=admin;Password=Sistema@2024;Include Error Detail=true;"
+            AppSettings__DatabaseType: PostgreSql           
+        depends_on:
+            - mongo
+            - pgadmin
+            - postgres
+            - rabbitmq    
