--- a/src/src/services/DeveloperEvaluation.ProductsApi/DeveloperEvaluation.ProductsApi.csproj
+++ b/src/src/services/DeveloperEvaluation.ProductsApi/DeveloperEvaluation.ProductsApi.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>0caf6535-96f2-4d67-a416-3089d65205c3</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
