--- a/src/src/services/DeveloperEvaluation.CartsApi/DeveloperEvaluation.CartsApi.csproj
+++ b/src/src/services/DeveloperEvaluation.CartsApi/DeveloperEvaluation.CartsApi.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a05caaf0-70ec-4761-a469-1c8013106e61</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
