--- a/src/src/front-end/nginx.conf
+++ b/src/src/front-end/nginx.conf
@@ -17,7 +17,7 @@ http {
         }
 
         location /api-products/ {
-            proxy_pass http://developerEvaluation-api-products:5162/;
+            proxy_pass http://api-products:5162/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -25,7 +25,7 @@ http {
         }
 
         location /api-carts/ {
-            proxy_pass http://developerEvaluation-api-carts:5077/;
+            proxy_pass http://api-carts:5077/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
