--- a/src/src/testes/DeveloperEvaluation.ProductsApiTest/DeveloperEvaluation.ProductsApiTest.csproj
+++ b/src/src/testes/DeveloperEvaluation.ProductsApiTest/DeveloperEvaluation.ProductsApiTest.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="FluentAssertions" Version="8.1.1" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
